# TinyTransformers

./: .gitignore  Is_the_embedding_table_the_training_target_for_BigramModel.md  README.md  build_my_own_transformers.py  cross_entropy_explained.md  notes.md  pyproject.toml  pytest.ini  requirements.txt  weight_matrix_toy_example.py  where_shall_do_embedding.md
checkpoints/: ckpt_gpt.pt  ckpt_simple_bigram.pt
experiment_code/: build_my_own_transformers.py  lets_build_gpt_follow_video.py  plotting_for_notes.py  weight_matrix_toy_example.py
inference_generation/: gpt2_huggingface.py  gpt2_summarization_w_lora.py  simple_bigram_generation.py
lecture_code_and_data/: bigram.py  bigram_outputs.txt
notes/: AdamW.md  Customizing_SGD_momentum_RMSProp_Adam_and_WeightDecay.md  Embedding_and_layer_norm.md  Fine_Tuning_high_level_summary.md  Gracefully_apply_param_init_and_misc_with_apply.md  How_to_read_HuggingFace_GPT2_model_params.md  Is_training_of_QKV_happens_with_training_embedding.md  Layers_of_Transformers.md  Mixed_Precision_TF32_vs_BF16.md  Multi_head_attention.md  One_page_to_learn_DataLoader.md  One_page_to_learn_DataLoader.md.md  Parallel_Computation_DDP_FSDP_and_MapReduce.md  README.md  Semantic_Search_and_Embedding.md  TensorFloat32_Know_How.md  The_Engineering_of_Training_and_Inference.md  Tmux_setup.md  Training_notes.md  What_are_we_training_for_GPT2.md  What_does_embedding_matrix_store.md  What_is_Dropout.md  What_is_SHA256SUMS_file.md  What_is_TFLOP.md  What_is_self(idx).md  best_practices_for_config_hypterparams.md  cross_entropy_explained.md  (+11 more)
(+53 files in other folders)
