[build-system]
requires = ["setuptools>=61.0", "wheel"]  # Build dependencies
build-backend = "setuptools.build_meta"

[project]
name = "TinyTransformer"                 # Project name (matches root folder)
version = "0.1.0"                         # Initial version
authors = [
  { name="Anna Li", email="your.email@example.com" }  # Optional
]
description = "An implementation of the 124M paramaters GPT2 models"
requires-python = ">=3.8"                 # Minimum Python version

[tool.setuptools]
package-dir = {"" = "src"}  # Tells setuptools: "root package lives in src/"

[tool.setuptools.packages.find]
where = ["src"]             # Find packages inside the src/ folder
include = ["tinygpt*"]  # Include all subpackages under tinygpt/